# MultiCameraTargetTracking

./: README.md
include/: TLD.h
src/: CMakeCache.txt  CMakeLists.txt  FerNNClassifier.cpp  LKTracker.cpp  Makefile  PatchGenerator.cpp  PatchGenerator.h  TLD.cbp  TLD.cpp  cmake_install.cmake  opencv.cpp  run.cpp
